Closed Bug 136884 Opened 23 years ago Closed 23 years ago

printing broken on OpenVMS

Categories

(Core :: Printing: Output, defect)

DEC
OpenVMS
defect
Not set
blocker

Tracking

()

VERIFIED FIXED

People

(Reporter: colin, Assigned: colin)

Details

Attachments

(1 file)

As a fallout of the recent changes in the printing code, printing is now completely busted on OpenVMS. The postscript file gets created but is never actually queued for printing. I see the problem (OpenVMS specific code which queues the print job is now in a place where its never executed!) and am testing a fix. Should have a patch soon.
Attached patch PatchSplinter Review
The patch fixes three things: 1. It moves the VMS specific piece of code which actually issues the print command back into a place where it actually gets executed (the diff output for this change make the change look a lot more drastic than it really is). 2. It deletes the temporary file at the end of a print preview operation (previously the file was just left because on OpenVMS we can't use tmpfile) 3. Add the pref "print.print_command" to openvms.js since the code now seems to be using this pref AS WELL AS "print.postscript.print_command". rods@netscape.com - can I get an r= from you please? And then who do I need to ask for a super-review?
By the way, I REALLY need to get this into RC1. Printing is completely broken on OpenVMS without it. I don't know if I'm allowed to set the target milestone myself.
Comment on attachment 78754 [details] [diff] [review] Patch looks correct r=rods
Attachment #78754 - Flags: review+
Comment on attachment 78754 [details] [diff] [review] Patch sr=attinasi
Attachment #78754 - Flags: superreview+
Comment on attachment 78754 [details] [diff] [review] Patch a=asa (on behalf of drivers) for checkin to the 1.0 branch
Attachment #78754 - Flags: approval+
Checked in to MOZILLA_1_0_0_BRANCH: Checking in modules/libpref/src/unix/openvms.js; /cvsroot/mozilla/modules/libpref/src/unix/openvms.js,v <-- openvms.js new revision: 1.13.2.2; previous revision: 1.13.2.1 done Checking in gfx/src/ps/nsPostScriptObj.cpp; /cvsroot/mozilla/gfx/src/ps/nsPostScriptObj.cpp,v <-- nsPostScriptObj.cpp new revision: 1.72.2.2; previous revision: 1.72.2.1 done
Assignee: rods → colin
This is fixed on the 1_0_0 branch and I'll check it in to the tip just as soon as the tree opens. This problem should be closed today.
Status: NEW → ASSIGNED
Checked in to trunk. Checking in mozilla/modules/libpref/src/unix/openvms.js; /cvsroot/mozilla/modules/libpref/src/unix/openvms.js,v <-- openvms.js new revision: 1.14; previous revision: 1.13 done Checking in mozilla/gfx/src/ps/nsPostScriptObj.cpp; /cvsroot/mozilla/gfx/src/ps/nsPostScriptObj.cpp,v <-- nsPostScriptObj.cpp new revision: 1.73; previous revision: 1.72 done
Status: ASSIGNED → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
adding fixed1.0.0 keyword (branch resolution). This bug has comments saying it was fixed on the 1.0 branch and a bonsai checkin comment that agrees. To verify the bug has been fixed on the 1.0 branch please replace the fixed1.0.0 keyword with verified1.0.0.
Keywords: fixed1.0.0
Colin, can you verify this and mark verified-fixed?
Verified that printing is working on my 1.0-RC2 build.
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: