Make printing work again on OpenVMS. b=136884 r=rods sr=attinasi